# FreeCAD-MCP

./: .gitignore  ARCHITECTURE_PLAN.md  EXECUTION_WORKSTREAMS.md  Init.py  InitGui.py  README.md  package.xml  pyproject.toml
artifacts/: manifest.json  recompute_report.json
contracts/: CHANGELOG.md  feature.schema.json  manifest.schema.json  mcp_tools.schema.json  ui_events.schema.json
contracts/api_examples/: create_project.json
docs/: DEVELOPMENT.md  FREECAD_SETUP.md
src/freecad_mcp/: __init__.py  cli.py  contracts.py  diagnostics.py  mcp_tools.py  models.py  server.py
src/freecad_mcp/adapter/: __init__.py  freecad_adapter.py
src/freecad_mcp/intelligence/: __init__.py  rule_engine.py
src/freecad_mcp/orchestration/: __init__.py  service.py
src/freecad_mcp/resources/: __init__.py
src/freecad_mcp/resources/contracts/: __init__.py  param.schema.json  rules.schema.json
src/freecad_mcp/resources/material_rules/: __init__.py  default.yaml
src/freecad_mcp/resources/templates/: __init__.py
src/freecad_mcp/resources/templates/params/: __init__.py  (+1 more)
src/freecad_mcp/workbench/: Init.py  InitGui.py  __init__.py  commands.py  context.py  qt.py  session.py
src/freecad_mcp/workbench/docks/: __init__.py  assembly.py  design_assistant.py  parameter_editor.py  rule_check.py
templates/assemblies/: README.md
templates/parts/: README.md
tests/: test_adapter_mock.py  test_cli.py  test_contracts.py  test_freecad_integration.py  test_freecad_marker.py  test_mcp_registry.py  test_operation_logs.py  test_parameters.py  test_rules.py  test_workbench_shell.py
